Fix misaligned list, update buttons

--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
             <p>
                 Examples of Elements and Components for the site.
                 <p>More information is available through the 
-                    <span style="position: relative;width: 1.8em;height: 2.8em;display: inline-block;margin-left: 50px;">
+                    <span style="position: relative;width: 1.8em;height: 2.8em;display: inline-block;margin-left:20px;">
                         <button class="help_button">?</button>
                     </span>
                  buttons </p>
@@ -235,15 +235,15 @@
             <div class="module">
                 <h2 class="center">Headings</h2>
                 <button class="help_button" onclick="javascript:introJs().start().goToStep(6);">?</button>
-                <h1>H1</h1>
-                <h2>H2</h2>
-                <h3>H3</h3>
-                <h4>H4</h4>
-                <h5>H5</h5>
-                <h6>H6</h6>
+                <h1>H1 Heading</h1>
+                <h2>H2 Heading</h2>
+                <h3>H3 Heading</h3>
+                <h4>H4 Heading</h4>
+                <h5>H5 Heading</h5>
+                <h6>H6 Heading</h6>
 
                 <div class="example" data-step="6" data-intro="All Heading uses HelveticaNeueBdCn, and progress in size from .9 to 2.0em. <br/> Here, set on a black backgound with white text the ">
-                    <h3 class="title">List heading example</h3>
+
                     <div class="wrap">
                         <div class="list_header">Section Title <span class="float_right">Subsection Title</span></div>
                         <!--
@@ -263,9 +263,9 @@
 					<div class="wrap">
 						<div class="list_header">Quick Multi<span class="float_right">Racing</span></div>
 						<ul class="luxbet_list_page">
-							<li><a><span class="titleWrap"><span class="">The Event name (ie TrackName R1)</span></span><span class="arrowWrap"><span class="arrow">&#8250;</span></span></a></li>
-							<li><a><span class="titleWrap"><span class="">The Event name (ie TrackName R2)</span></span><span class="arrowWrap"><span class="arrow">&#8250;</span></span></a></li>
-							<li><a><span class="titleWrap"><span class="">The Event name (ie TrackName R3)</span></span><span class="arrowWrap"><span class="arrow">&#8250;</span></span></a></li>
+							<li><a><span class="titleWrap"><span class="title">The Event name (ie TrackName R1)</span></span><span class="arrowWrap"><span class="arrow">&#8250;</span></span></a></li>
+							<li><a><span class="titleWrap"><span class="title">The Event name (ie TrackName R2)</span></span><span class="arrowWrap"><span class="arrow">&#8250;</span></span></a></li>
+							<li><a><span class="titleWrap"><span class="title">The Event name (ie TrackName R3)</span></span><span class="arrowWrap"><span class="arrow">&#8250;</span></span></a></li>
 						</ul>
 					</div>
                 </div>
@@ -290,9 +290,9 @@
                         data-intro="Affirmative classed buttons, are elements who's action have positive, or affirmative connotation from the user. Use cases include 'Confirm', 'Yes', and 'I Agree'. The positive nature of the buttons is denoted by the use of the green complimentary colour."
                     >Positive</button>
 
-                    <button class="alternative">
-                        Alternative
-                    </button>
+                    <button class="alternative">Alternative</button><br/>
+
+					<button class="supplementary">Bet Now</button>
 
                     <button class="negative"
                         data-step="9"
@@ -302,6 +302,13 @@
                     </button>
                     <!-- <button class="negative_alt">Negative alt</button> -->
                 </div>
+				<div class="clearspace"></div>
+				<div>
+					<button class="affirmative">Place All Bets</button>
+					<button class="alternative">Add to Betslip</button>
+					<button class="short">Clear All Bets</button>
+					<button class="short">Edit</button>
+				</div>
             </div>
 
 			<!-- Inputs -->
@@ -920,6 +927,8 @@
 
                             <div class="products">
                                 <span class="product" style="background-color:#0099FF">DIV</span>
+								<span class="product" style="background-color:#0099FF">FIX</span>
+								<span class="product" style="background-color:#0099FF">TF</span>
                             </div>
 
                         </a>
@@ -973,7 +982,7 @@
 
 							<div class="buttonPadding center">
 								<span class="button alternative"><a>My Account</a></span>
-								<span class="button alternative"><a>Make a Deposit</a></span>
+								<span class="button alternative"><a>Deposit</a></span>
 							</div>
 						</div>
 						<li>
@@ -1366,7 +1375,7 @@
 						<li>
 							<div class="wrapper notifyWrapper">
 								<div class="message notify">
-									<h3><span>&#x2713;</span> Account Verified</h3>
+									<h3><span style="font-size: 35px;">&#x2713;</span> Account Verified</h3>
 									<p>More information on IDV can be found below</p>
 								</div>
 							</div>
