--- a/index.html
+++ b/index.html
@@ -938,7 +938,7 @@
             </div>
 
 			<!-- Site Navigation -->
-            <div class="module">
+            <div class="module sitenav">
                 <h2 class="center">Site Navigation</h2>
 				<div class="clearspace"></div>
 
@@ -952,20 +952,20 @@
 							</div>
 						</div>
 						<li>
-							<a class="active">Next To Go</a>
+							<a id="link1" class="active">Next To Go</a>
 						</li>
 						<li>
-							<a>Horse Racing</a>
+							<a id="link2">Horse Racing</a>
 						</li>
 						<li>
-							<a>Harness Racing</a>
+							<a id="link3">Harness Racing</a>
 						</li>
 						<li>
-							<a>Greyhound Racing</a>
+							<a id="link4">Greyhound Racing</a>
 						</li>
 						<li class="navSeparator"></li>
 						<li>
-							<a>Help</a>
+							<a id="link5">Help</a>
 						</li>
 					</ul>
 				</nav>
@@ -986,20 +986,20 @@
 							</div>
 						</div>
 						<li>
-							<a class="active">Next To Go</a>
+							<a id="link6" class="active">Next To Go</a>
 						</li>
 						<li>
-							<a>Horse Racing</a>
+							<a id="link7">Horse Racing</a>
 						</li>
 						<li>
-							<a>Harness Racing</a>
+							<a id="link8">Harness Racing</a>
 						</li>
 						<li>
-							<a>Greyhound Racing</a>
+							<a id="link9">Greyhound Racing</a>
 						</li>
 						<li class="navSeparator"></li>
 						<li>
-							<a>Logout</a>
+							<a id="link10">Logout</a>
 						</li>
 						<li>
 							<a>Help</a>
@@ -1136,7 +1136,7 @@
 				<!-- Bet Ticket -->
                 <div class="clearspace"></div>
                 <h3>Bet Ticket</h3>
-                <div class="bet selection ticket ticketBody">
+                <div class="bet selection ticket ticketBody ticketBodyExample">
                     <div class="selectionDetails clearfix">
                         <div class="selectionName">
                             <span class="selectionPosition">2: </span>
@@ -1171,15 +1171,15 @@
                         </div>
                     </div>
 					<div class="calc">
-						<button>+50c</button>
-						<button>+$1</button>
-						<button>+$5</button>
-						<button>+$10</button>
-						<button>+$50</button>
-						<button>+$100</button>
-						<button>+$500</button>
-						<button>+$1000</button>
-						<button class="buttonClear">Clear</button>
+						<button id="50">+50c</button>
+						<button id="100">+$1</button>
+						<button id="500">+$5</button>
+						<button id="1000">+$10</button>
+						<button id="5000">+$50</button>
+						<button id="10000">+$100</button>
+						<button id="50000">+$500</button>
+						<button id="100000">+$1000</button>
+						<button id="0" class="buttonClear">Clear</button>
 					</div>
 					<div class="buttonWrap">
 						<button class="buttonPlaceBet affirmative">Place Bet</button>
