Update closed time to lLuxbet red

--- a/src/index.html
+++ b/src/index.html
@@ -292,7 +292,7 @@
 
                     <button class="alternative">Alternative</button><br/>
 
-					<button class="supplementary">Bet Now</button>
+					<button class="supplementary">Supplementary</button>
 
                     <button class="negative"
                         data-step="9"
@@ -866,7 +866,7 @@
                             <span class="titleWrap">
                                 <span class="title">The Event name (ie TrackName R2)</span>
                                 <span id="time_example_1" class="time">
-                                    <span class="message">Closed</span>
+                                    <span class="message closed">Closed</span>
                                 </span>
                             </span>
                         </a>
