--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </p>
 
 			<!-- Colours -->
-            <div class="module">
+            <div class="module color">
                 <h2 class="center">Colours</h2>
                 <button class="help_button" onclick="javascript:introJs().start().goToStep(1);">?</button>
 
@@ -38,12 +38,11 @@
                     data-position='bottom'>
                     <thead>
                         <th></th>
-                        <th><h5>Feature</h5></th>
-                        <th><h5>Complimentary</h5></th>
-                        <th><h5>Primary</h5></th>
-						<th><h5>Secondary</h5></th>
-                        <th><h5>Supp 1</h5></th>
-						<!--<th><h5>Supp 2</h5></th>-->
+                        <th>Feature</th>
+                        <th>Complimentary</th>
+                        <th>Primary</th>
+						<th>Secondary</th>
+                        <th>Supplement</th>
                     </thead>
                     <tbody>
                         <tr class="standard">
@@ -188,11 +187,11 @@
 				<table class="colour-table">
 					<thead>
 						<th></th>
-						<th><h5>Black</h5></th>
-						<th><h5>White</h5></th>
-						<th><h5>Blue</h5></th>
-						<th><h5>-</h5></th>
-						<th><h5>-</h5></th>
+						<th>Black</th>
+						<th>White</th>
+						<th>Blue</th>
+						<th></th>
+						<th></th>
 					</thead>
 					<tbody>
 					<tr class="colour">
