Style review from Charlotte: Larger font on mainnav, apply transition on buttons and lists, round border on ticket and bets X mark

--- a/src/index.html
+++ b/src/index.html
@@ -1030,9 +1030,9 @@
                 <h2 class="center">Page Layout</h2>
                 <div class="pageLayoutExample">
                     <div class="applicationWrap">
-                        <div class="leftNavWrap"> Left Nav</div>
+                        <div class="leftNavWrap"> Left Nav  (fixed 250px)</div>
                         <div class="leftShadow"></div>
-                        <div class="betslipWrap"> Betslip </div>
+                        <div class="betslipWrap"> Betslip (fixed 250px) </div>
                         <div class="rightShadow"></div>
                         <div class="pageWrap"> <h3>PageWrap</h3> </div>
                     </div>
@@ -1211,7 +1211,7 @@
                 <h2 class="center">Cart (Betslip)</h2>
                 <div class="clearspace"></div>
                     <div class="betslip">
-                        <div class="list_header">BET SLIP</div>
+						<div class="header"><h3>Betslip</h3></div>
                         <div class="sub_header list_header_invert">Single Bets</div>
                         <div class="bet selection clearfix">
                             <div class="selectionDetails clearfix">
