--- a/index.html
+++ b/index.html
@@ -820,8 +820,20 @@
                 <ul class="luxbet_list_page with-icons">
                     <li>
                         <a>
-                            <!-- should come from an icon helper -->
                             <div class="icon icon-sports-horse-racing category-icon"></div>
+
+                            <span class="arrowWrap">
+                                <span class="arrow">&#8250;</span>
+                            </span>
+
+                            <span class="titleWrap">
+                                <span class="title">The Event name (ie TrackName R1)</span>
+                            </span>
+                        </a>
+                    </li>
+					<li>
+						<a>
+							<div class="icon icon-sports-horse-racing category-icon"></div>
 
                             <span class="arrowWrap">
                                 <span class="arrow">&#8250;</span>
@@ -830,8 +842,21 @@
                             <span class="titleWrap">
                                 <span class="title">The Event name (ie TrackName R2)</span>
                             </span>
-                        </a>
-                    </li>
+						</a>
+					</li>
+					<li>
+						<a>
+							<div class="icon icon-sports-horse-racing category-icon"></div>
+
+                            <span class="arrowWrap">
+                                <span class="arrow">&#8250;</span>
+                            </span>
+
+                            <span class="titleWrap">
+                                <span class="title">The Event name (ie TrackName R3)</span>
+                            </span>
+						</a>
+					</li>
                 </ul>
 
                 <div class="clearspace"></div>
@@ -848,7 +873,7 @@
                             </span>
 
                             <span class="titleWrap">
-                                <span class="title">The Event name (ie TrackName R2)</span>
+                                <span class="title">The Event name (ie TrackName R1)</span>
                                 <span id="time_example_1" class="time">
                                     <span class="warn">
                                         <!--<div class="icon x-small icon-sports-time"></div>-->
@@ -862,6 +887,54 @@
                             </span>
                         </a>
                     </li>
+					<li>
+						<a>
+							<!-- should come from an icon helper -->
+							<div class="icon icon-sports-horse-racing category-icon"></div>
+
+                            <span class="arrowWrap">
+                                <span class="arrow">&#8250;</span>
+                            </span>
+
+                            <span class="titleWrap">
+                                <span class="title">The Event name (ie TrackName R2)</span>
+                                <span id="time_example_1" class="time">
+                                    <span class="warn">
+                                        <!--<div class="icon x-small icon-sports-time"></div>-->
+                                         Betting Closing in
+                                    </span>
+                                    <span class="time_text">
+                                        <span class="time-until"></span> at
+                                        <span class="time-local"></span>
+                                    </span>
+                                </span>
+                            </span>
+						</a>
+					</li>
+					<li>
+						<a>
+							<!-- should come from an icon helper -->
+							<div class="icon icon-sports-horse-racing category-icon"></div>
+
+                            <span class="arrowWrap">
+                                <span class="arrow">&#8250;</span>
+                            </span>
+
+                            <span class="titleWrap">
+                                <span class="title">The Event name (ie TrackName R3)</span>
+                                <span id="time_example_1" class="time">
+                                    <span class="warn">
+                                        <!--<div class="icon x-small icon-sports-time"></div>-->
+                                         Betting Closing in
+                                    </span>
+                                    <span class="time_text">
+                                        <span class="time-until"></span> at
+                                        <span class="time-local"></span>
+                                    </span>
+                                </span>
+                            </span>
+						</a>
+					</li>
                 </ul>
 
 
@@ -881,7 +954,7 @@
                             </span>
 
                             <span class="titleWrap">
-                                <span class="title">The Event name (ie TrackName R2)</span>
+                                <span class="title">The Event name (ie TrackName R1)</span>
                                 <span id="time_example_1" class="time">
                                     <span class="message closed">Closed</span>
                                 </span>
@@ -929,7 +1002,7 @@
                             </span>
 
                             <span class="titleWrap">
-                                <span class="title">The Event name (ie TrackName R2)</span>
+                                <span class="title">The Event name (ie TrackName R3)</span>
                                 <span id="time_example_1" class="time">
                                     <span class="warn">
                                         <!--<div class="icon x-small icon-sports-time"></div>-->
