Fix styleguide blue text

--- a/src/index.html
+++ b/src/index.html
@@ -213,8 +213,8 @@
 						<td>
 							<div class="blue colour_swatch">
 								<div class="cmyk">C0 M0 Y0 K01</div>
-								<div class="rgb">R252 G252 B252</div>
-								<div class="hex">#131313</div>
+								<div class="rgb">R57 G158 B207</div>
+								<div class="hex">#399ecf</div>
 							</div>
 						</td>
 						<td><div class="colour_swatch"></div></td>
